<resources>
    <string name="app_name">WanAndroid</string>
    <string name="welcom_splash_content_csdn">欢迎光临个人博客!\nhttps://blog.csdn.net/wangxp423</string>
    <string name="welcom_splash_content_github">欢迎光临个人gitHub!\nhttps://github.com/wangxp423</string>
    <string name="main_nav_header_unlogin">未登录</string>
    <string name="main_nav_header_logout">Logout</string>
    <string name="main_nav_header_please_login">请先登录</string>
    <string name="main_nav_menu_like">我喜欢的</string>
    <string name="main_nav_menu_about">关于我们</string>
    <string name="main_nav_menu_csdn">我的博客</string>
    <string name="main_bottom_nav_menu_home">首页</string>
    <string name="main_bottom_nav_menu_type">分类</string>
    <string name="main_toolbar_menu_search">搜索</string>
    <string name="main_toolbar_menu_hot">热门</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_double_click_exit">再按一次退出程序</string>
    <string name="main_about_about_us">关于我们</string>
    <string name="main_about_version_code">%1$s\n%2$s</string>
    <string name="main_about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>如果您有任何好的建议：</p>
            <ul>
                <li>\t\t关于网站排版</li>
                <li>\t\t关于新增常用网址以及工具</li>
                <li>\t\t未来你希望增加的功能等</li>
            </ul>
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/wangzailfm/wanandroidclient" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>

    <string name="main_collect_title">收藏</string>
    <string name="main_collect_time">收藏时间：%1$s</string>
    <string name="main_collect_success">收藏成功</string>
    <string name="main_collect_failed">收藏失败：%1$s</string>
    <string name="main_collect_cancel_success">取消收藏成功</string>
    <string name="main_collect_cancel_failed">取消收藏失败：%1$s</string>
    <string name="main_collect_list_no_data">这里空空如也...</string>
    <string name="main_hot_lable_my_bookmark">我的书签</string>
    <string name="main_hot_lable_hot_search">大家都在搜</string>
    <string name="main_hot_lable_hot_use">常用网站</string>


    <string name="login_tip_login_first">请先登录...</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_btn_register">注册</string>
    <string name="login_btn_login">登录</string>
    <string name="login_password_not_empty">密码不能为空</string>
    <string name="login_password_length_short">密码长度不能小于6位</string>
    <string name="login_username_not_empty">用户名不能为空</string>
    <string name="login_toast_login_success">登录成功</string>
    <string name="login_toast_login_fail">登录失败</string>
    <string name="login_toast_register_success">注册成功</string>
    <string name="login_toast_register_fial">注册失败</string>


    <string name="blog_title_search">搜索</string>
    <string name="blog_title_loading">加载中...</string>
    <string name="blog_content_share">分享</string>
    <string name="blog_content_collect">收藏</string>
    <string name="blog_content_collect_already">已收藏</string>
    <string name="blog_content_use_browser">用系统浏览器打开</string>
    <string name="blog_share_title">分享</string>
    <string name="blog_share_type_title">分享专题</string>
    <string name="blog_share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="blog_share_type_url">%1$s分享【%2$s】专题：http://www.wanandroid.com/article/list/0?cid=%3$d</string>
    <string name="blog_outside_title">归为站外文章</string>
    <string name="blog_my_csdn">我的博客</string>
    <string name="blog_my_csdn_link">https://blog.csdn.net/wangxp423</string>
    <string name="blog_my_github">我的github</string>
    <string name="blog_my_github_link">https://github.com/wangxp423</string>

    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
</resources>
