<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/blog_content_menu_item_share"
        android:orderInCategory="100"
        android:title="@string/blog_content_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/blog_content_menu_item_collect"
        android:orderInCategory="100"
        android:title="@string/blog_content_collect"
        android:icon="@drawable/ic_action_white_like"
        app:showAsAction="never" />

    <item
        android:id="@+id/blog_content_menu_item_browser"
        android:orderInCategory="100"
        android:title="@string/blog_content_use_browser"
        android:icon="@drawable/ic_action_browser"
        app:showAsAction="never" />
</menu>