<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/blog_csdn_toolbar"
            style="@style/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white"
            tools:text="@string/app_name"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_blog_csdn_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_normal"
        android:layout_marginRight="@dimen/margin_right_normal"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:background="@drawable/radius_stroke_gray_solid_white"
        android:lineSpacingExtra="@dimen/text_space_normal"
        android:padding="@dimen/padding_normal"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tv_blog_csdn_csdn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcom_splash_content_csdn" />

    <TextView
        android:id="@+id/tv_blog_csdn_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:text="@string/welcom_splash_content_github" />

</LinearLayout>