<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_activity_login_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_action_account_circle" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_activity_login_username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_normal"
        android:layout_marginRight="@dimen/margin_right_normal"
        android:layout_below="@+id/login_activity_login_logo"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

        <EditText
            android:id="@+id/login_activity_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:text="1039063146@qq.com"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_activity_login_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_normal"
        android:layout_marginRight="@dimen/margin_right_normal"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:layout_below="@+id/login_activity_login_username_til"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

        <EditText
            android:id="@+id/login_activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:text="wangwa423"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:layout_below="@+id/login_activity_login_password_til"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_activity_login_registe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:text="@string/login_btn_register" />

        <Button
            android:id="@+id/login_activity_login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right_normal"
            android:text="@string/login_btn_login" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_activity_login_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/login_activity_login_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/margin_right_normal"
        android:src="@drawable/ic_clear_black_24dp" />
</RelativeLayout>